...
            "state" : "translated",
            "value" : "Áĺƀúḿš ŵíţĥ áţ ĺéášţ %lld ţŕáçķš. Ŵáţçĥ ţĥé ávéŕáĝé çĺíḿƀ ŵĥéñ ţĥé ÇĐ áŕŕívéš, ţĥéñ ƒáĺĺ áĝáíñ. one two three four five six seven"
          }
        }
      }
    },
    "All" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "All"
          }
...
            "state" : "translated",
            "value" : "ƁƤḾ one"
          }
        }
      }
    },
    "Back" : {
      "localizations" : {
        "en-XA" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Ɓáçķ one"
          }
...
            "state" : "translated",
            "value" : "Đóúƀĺé-ţáƥ ţó ŕéšúḿé éƥíšóđé one two three"
          }
        }
      }
    },
    "Download" : {
      "localizations" : {
        "en-XA" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Đóŵñĺóáđ one"
          }
...
            "state" : "translated",
            "value" : "Ķééƥ ƥŕéƥáŕéđ çóƥíéš ƒóŕ ƒášţéŕ ŕé-šýñçš one two three"
          }
        }
      }
    },
    "Keep the restored queue" : {
      "localizations" : {
        "en-XA" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Ķééƥ ţĥé ŕéšţóŕéđ qúéúé one two"
          }
...
            "state" : "translated",
            "value" : "Ĺášţ éƥíšóđé %@ one two"
          }
        }
      }
    },
    "Last.fm" : {
      "comment" : "A section in the scrobble settings pane for Last.fm.",
      "isCommentAutoGenerated" : true,
      "localizations" : {
        "en-XA" : {
          "stringUnit" : {
            "state" : "translated",
...
            "state" : "translated",
            "value" : "Ŕéçóvéŕ one"
          }
        }
      }
    },
    "Refresh" : {
      "localizations" : {
        "en-XA" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Ŕéƒŕéšĥ one"
          }
...
            "state" : "translated",
            "value" : "Ŕéḿóvé Çóĺóúŕ one"
          }
        }
      }
    },
    "Remove Download" : {
      "localizations" : {
        "en-XA" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Ŕéḿóvé Đóŵñĺóáđ one two"
          }
...
            "state" : "translated",
            "value" : "Šĥóŵ çĥáƥţéŕš one"
          }
        }
      }
    },
    "Show in Finder" : {
      "localizations" : {
        "en-XA" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Šĥóŵ íñ Ƒíñđéŕ one two"
          }
...
